--- a/rtl/top/analog_two/Makefile
+++ b/rtl/top/analog_two/Makefile
@@ -7,7 +7,6 @@ endif
 TOP:=$(shell realpath --relative-to $(CURDIR)/../ $(CURDIR))
 
 # include cocotb's make rules to take care of the simulator setup
-.PHONY: bitstream
 
 # include $(shell cocotb-config --makefiles)/Makefile.sim
 
@@ -16,5 +15,7 @@ bitstream:
 	$(PODMAN) run  --rm -t -v $(CURDIR)/../..:/src -w /src/top/$(TOP) localhost/lpp/fusion_bitstream_builder  python3 top.py
 
 
-sim: bitstream
+sim: 
 	$(MAKE) -f $(CURDIR)/Makefile.sim $@
+
+all: bitstream sim
